[gd_scene load_steps=12 format=3 uid="uid://chfgveu0gjwbd"]

[ext_resource type="Script" path="res://enemies/plant_enemy.gd" id="1_46wei"]
[ext_resource type="Texture2D" uid="uid://8amknpvd47t0" path="res://enemies/plant_enemy.png" id="1_d85q6"]
[ext_resource type="PackedScene" uid="uid://5uy3efkbsge6" path="res://collisions/hurtbox.tscn" id="2_kf55f"]
[ext_resource type="PackedScene" uid="uid://dsyg0t3624o83" path="res://collisions/hitbox.tscn" id="3_7jpk2"]
[ext_resource type="PackedScene" uid="uid://vc3sirmfvbpe" path="res://stats.tscn" id="5_e6px6"]
[ext_resource type="PackedScene" uid="uid://bwdq65xhu11si" path="res://enemies/enemy_health_bar.tscn" id="6_n2kiq"]

[sub_resource type="Animation" id="Animation_5yrng"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xmau6"]
resource_name = "attack"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire_bullet"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4phqi"]
_data = {
"RESET": SubResource("Animation_5yrng"),
"attack": SubResource("Animation_xmau6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ii4k"]
size = Vector2(14, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_lsn7f"]
radius = 5.0

[node name="PlantEnemy" type="Node2D"]
script = ExtResource("1_46wei")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_d85q6")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_4phqi")
}
autoplay = "attack"

[node name="BulletSpawnPoint" type="Marker2D" parent="."]
position = Vector2(0, -9)

[node name="FireDirection" type="Marker2D" parent="."]
position = Vector2(0, -15)

[node name="Hurtbox" parent="." instance=ExtResource("2_kf55f")]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_7ii4k")

[node name="Hitbox" parent="." instance=ExtResource("3_7jpk2")]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_lsn7f")

[node name="Stats" parent="." instance=ExtResource("5_e6px6")]

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-2.27374e-13, -6)
scale = Vector2(2.8, 2.8)

[node name="EnemyHealthBar" parent="." instance=ExtResource("6_n2kiq")]
offset_left = -11.0
offset_top = -19.0
offset_right = 11.0
offset_bottom = -15.0

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
